--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c
-osx_image: xcode8.2
+osx_image: xcode9.2
 
 cache: cocoapods
 podfile: Example/Podfile
@@ -13,13 +13,13 @@ env:
   - LANG=en_US.UTF-8
   - WORKSPACE=Example/BubblesView.xcworkspace
   - IOS_FRAMEWORK_SCHEME="BubblesView"
-  - IOS_SDK=iphonesimulator10.2
+  - IOS_SDK=iphonesimulator11.2
   - IOS_EXAMPLE_SCHEME="BubblesView_Example"
   matrix:
-  - DESTINATION="OS=10.2,platform=iOS Simulator,id=DB794781-65A7-4884-8D00-AAC3CBD39A44"  SCHEME="$IOS_EXAMPLE_SCHEME"  SDK="$IOS_SD$
+  - DESTINATION="OS=11.2,platform=iOS Simulator,id=9C4C0DDA-839D-4851-AA09-4382DB814A63"  SCHEME="$IOS_EXAMPLE_SCHEME"  SDK="$IOS_SD$
 
 before_install:
-- gem install cocoapods # Since Travis is not always on latest version
+- gem install cocoapods  --pre --no-rdoc --no-ri --no-document --quiet # Since Travis is not always on latest version
 
 script:
 - set -o pipefail
